# music_st

./: .gitignore  README.md  denoiser.ipynb  maint.py  prepare_data.ipynb  pyproject.toml  test.py  ttools.py  vq_vae_t.py
CycleGAN/: tools.py
replication/CycleGAN/: comp_train.ipynb  simp_train.ipynb  test.py  tools.py
replication/ulyanov/: main.ipynb  model.py  utils.py
replication/vq_vae/: maint.py
src/: data.py  demo.ipynb  ft.ipynb  model.py  nn_util.py  util.py  vq.py
