[project]
name = "music-st"
version = "0.1.0"
description = "Music Sytle Transfer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.3.0",
    "librosa>=0.10.2.post1",
    "matplotlib>=3.9.2",
    "numpy>=2.0.2",
    "soundfile>=0.12.1",
    "torch>=2.5.1",
    "wandb>=0.18.5",
]
